# HNI-VLM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: README.md
data/benchmark_495/: README.md
docs/: framework.md
examples/: 01_quickstart.ipynb
hni_vlm/: __init__.py  classifier.py  evaluate.py  prompts.py  schemas.py
hni_vlm/models/: __init__.py  base.py  qwen_backend.py
hni_vlm/utils/: __init__.py  image_utils.py
tests/: test_smoke.py
